tests/codegen/invalid/assembly_errors/test_type_mismatch.src
// Тест: несоответствие типов
fn main() -> int {
    int x = "hello";
    return x;
}